<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniHerts</string>
    <string name="title_activity_uni_map">Map</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="map_button">Map</string>
    <string name="static_map_button">PDF Map</string>
    <string name="id_button">ID Card</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="buildings">Buildings</string>
    <string name="rooms">Rooms</string>
    <string name="search_hint_map">Enter Building Name</string>
    <string name="search_title">Search Buildings</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">The world is your wall</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="prompt_post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="progress_post">Posting…</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_student_id">StudentID</string>
    <string name="service_name">CardEmulation Sample</string>
    <string name="card_title">Sample Loyalty Card</string>
    <string name="account_number">Student Number</string>
    <string name="sample_show_log">Show Log</string>
    <string name="sample_hide_log">Hide Log</string>
    <string name="title_activity_search_places">Search Places</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list_rooms">List Rooms</string>
    <string name="title_activity_list_buildings">List Buildings</string>
    <string name="title_activity_card_view">CardView</string>
    <string name="title_activity_student_idmain">StudentIDMain</string>
    <string name="title_activity_student_idsettings">StudentIDSettings</string>
    <string name="title_activity_fullscreen_barcode">FullscreenBarcode</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_static_map">StaticMap</string>
    <string name="title_activity_barcode">Barcode</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_studentid">Student ID</string>
    <string name="prompt_card_barcode">Scan you Student ID Card </string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in…</string>
    <string name="progress_signup">Signing you up…</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="aiddescription">StudentID</string>
    <string name="title_activity_food">Food</string>
    <string name="title_activity_facebook_news">FacebookNews</string>
    <string name="facebook_app_id">1399663470355158</string>
    <string name="title_activity_parking_map">ParkingMap</string>


    <string-array name="map_menu_array">

        <item>Search Buildings</item>
        <item>Search Rooms</item>

    </string-array>

    <array name="map_menu_drawer_icons">
        <item>@raw/university</item>
        <item>@raw/classroom</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_study_net">StudyNet</string>

</resources>
